--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body >
 
        <!-- ......header..... -->
-       <!-- class="bg-[url('bg2.jpg')] bg-cover h-[600px] bg-center bg-no-repeat opacity-0.4" -->
+       <!--  -->
 
-        <nav>
+        <nav class="bg-[url('bg2.jpg')] bg-cover h-[600px] bg-center bg-no-repeat opacity-0.4">
             <div class="container bg-[#336666] flex justify-between items-center p-5 ">
                 <img class="m-5" src="images/logo-light.png" alt="Logo" />
                 <div class="hidden md:flex space-x-4">
